# clib

./: CMakeLists.txt  README.md
cmake/: doctest.cmake
include/clib/: header.hpp
online/: CMakeLists.txt  clib_example.cpp
src/clib/: source.cpp
test/: CMakeLists.txt
test/clib/: test.cpp
